# Monstka-vRUST

./: Cargo.toml  README.md  config.yaml
lib/src/: config.rs  lib.rs
lib/src/kafka_engine/: model.rs  service.rs
lib/src/word_engine/: service.rs
src/: consumer.rs  main.rs  producer.rs  utils.rs
