[package]
name = "rust_kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.3.0", features=["derive"] }
kafka = "0.9.0"
thiserror = "1.0.32"
log = "0.4.0"
env_logger = "0.10.0"
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9"
rand = "0.8.5"
reqwest = "0.11.18"
tokio = { version = "1.28.1", features = ["full"] }

[lib]
name = "monstka_lib"
path = "lib/src/lib.rs"
